# bug-tracker-rs

./: .gitignore  LICENSE  Makefile  README.md  design.md  start.sh
actix-backend/: Cargo.toml  init_db.sh  init_redis.sh  sqlx-data.json
actix-backend/migrations/: 20220824235641_create_users_table.sql  20220827042852_seed_user.sql  20220831103233_create_users_table.up.sql  20220831103240_create_projects_table.down.sql  20220831103240_create_projects_table.up.sql  20220831103256_seed_user.down.sql  20220831103256_seed_user.up.sql  20220831132736_create_issues_table.down.sql  20220831132736_create_issues_table.up.sql  20220831183349_create_sample_project.down.sql  20220831183349_create_sample_project.up.sql
actix-backend/src/: configurations.rs  lib.rs  main.rs  server_init.rs
actix-backend/src/auth/: login.rs  manage.rs  mod.rs  password.rs
actix-backend/src/routes/: login.rs  mod.rs
actix-backend/src/routes/get/: app.rs  login.rs  mod.rs  projects.rs
actix-backend/src/routes/post/: login.rs
types/: Cargo.toml
types/src/: lib.rs
yew-frontend/: Cargo.toml  index.html
yew-frontend/src/: components.rs  main.rs
yew-frontend/src/components/: card.rs  footer.rs  mod.rs  navbar.rs  navbar_struct.rs  sidebar.rs  text_button.rs  topbar.rs
yew-frontend/src/pages/: dashboard.rs  issues.rs  mod.rs  notfound.rs  projects.rs  settings.rs
yew-frontend/styles/: main.css
