[package]
name = "actix-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-session = "0.7.1"
actix-web = { version = "4.1.0" }
actix-web-lab = "0.17.0"
anyhow = "1.0.62"
rand = "0.8.5"
serde = "1.0.144"
serde_json = "1.0.85"
types = { path = "../types" }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
